Name:                noelm-get
Version:             0.1
Synopsis:            Tool for sharing and using Noelm libraries
Description:         noelm-get lets you install, update, and publish Noelm libraries

License:             BSD3
License-file:        LICENSE

Author:              Evan Czaplicki
Maintainer:          timothyhobbs@seznam.cz
Copyright:           Copyright: (c) 2013-2014 Evan Czaplicki, 2014 Timothy Hobbs

Category:            Language

Build-type:          Simple
Cabal-version:       >=1.9

source-repository head
  type:     git
  location: git://github.com/timthelion/noelm-get.git

Executable noelm-get
  Main-is:             Noelm/Get/Client/Main.hs
  ghc-options:         -threaded -O2
  Hs-Source-Dirs:      src

  other-modules:       Noelm.Get.Client.Install,
                       Noelm.Get.Client.Publish,
                       Noelm.Get.Client.Registry,
                       Noelm.Get.Utils.Commands,
                       Noelm.Get.Utils.Http,
                       Noelm.Get.Utils.Paths,
                       Noelm.Get.Utils.PrettyJson

  Build-depends:       aeson,
                       base >=4.2 && <5,
                       binary,
                       bytestring,
                       cmdargs,
                       containers,
                       directory,
                       Noelm >= 0.10.0,
                       filepath,
                       HTTP,
                       http-conduit >= 1.9, http-conduit < 2.0,
                       http-types,
                       json,
                       mtl,
                       network,
                       pretty,
                       process,
                       resourcet,
                       text,
                       vector

Library
 exposed-modules:
                       Noelm.Get.Utils.Paths,
                       Noelm.Get.Utils.Http,
                       Noelm.Get.Utils.Commands
 hs-source-dirs: src
 Build-depends:        aeson,
                       base >=4.2 && <5,
                       binary,
                       bytestring,
                       cmdargs,
                       containers,
                       directory,
                       Noelm >= 0.10.0,
                       filepath,
                       HTTP,
                       http-conduit >= 1.9, http-conduit < 2.0,
                       http-types,
                       json,
                       mtl,
                       network,
                       pretty,
                       process,
                       resourcet,
                       text,
                       vector